--- a/AB_tDCS-EEG.Rmd
+++ b/AB_tDCS-EEG.Rmd
@@ -21,23 +21,94 @@ print(sessionInfo())
 source(here("src", "func", "behavioral_analysis.R"))
 ```
 
-# Load study 2 data
+# Load data
 
-The following participants are excluded from further analysis at this point:
+## Study 2
 
-* `S03`, `S14`, `S29`, `S38`, `S43`, `S46`: their T1 performance in session 1 was less than 63% correct. This cutoff was determined based on a separate pilot study with 10 participants. It is two standard deviations below the mean of that sample.
+The following participants are excluded from further analysis at this point, because of incomplete data:
+
+* `S03`, `S14`, `S29`, `S38`, `S43`, `S46`: their T1 performance in session 1 was less than 63% correct, so they were not invited back. This cutoff was determined based on a separate pilot study with 10 participants. It is two standard deviations below the mean of that sample.
 * `S25` has no data for session 2, as they stopped responding to requests for scheduling the session
 * `S31` was excluded as a precaution after session 1, as they developed a severe headache and we could not rule out the possibility this was related to the tDCS
 
 ```{r load study 2 data}
-dataDir <- here("data","main") # root folder with AB task data
+dataDir_study2 <- here("data","main") # root folder with AB task data
 subs_incomplete <- c("S03", "S14", "S25", "S29", "S31", "S38", "S43", "S46") # don't try to load data from these participants
-groupData <- load_data_study2(dataDir, subs_incomplete)
+df_study2 <- load_data_study2(dataDir_study2, subs_incomplete) %>%
+  filter(complete.cases(.)) # discard rows with data from incomplete subjects
 ```
 
-Preprocess
-
 ```{r print slice study 2 data}
-kable(head(groupData,13), digits = 1, caption = "Data frame for study 2")
+kable(head(df_study2,13), digits = 1, caption = "Data frame for study 2")
+```
+
+The data has the following columns:
+
+* __subject__: Participant ID, e.g. `S01`, `S12
+* __first.session__: Whether the first session participant received `anodal` or `cathodal` tDCS in the first session. Codes for session order.
+* __stimulation__: Whether participant received `anodal` or `cathodal` tDCS
+* __block__: Whether data is before (`pre), during (`tDCS`) or after (`post`) tDCS
+* __lag__: Whether T2 followed T1 after two distractors (lag `3`) or after 7 distractors (lag `8`)
+* __trials__: Number of trials per lag that the participant completed in this block
+* __T1__: Percentage of trials (out of `trials`) in which T1 was identified correctly
+* __T2__: Percentage of trials (out of `trials`) in which T2 was identified correctly
+* __T2.given.T1__: Percentage of trials which T2 was identified correctly, out of the trials in which T1 was idenitified correctly (T2|T1).
+
+## Study 1
+
+These data were used for statistical analysis in London & Slagter (2015)[^ref_study1], and were processed by the lead author:
+
+[^ref_study1]: London, R. E., & Slagter, H. A. (2015). Effects of transcranial direct current stimulation over left dorsolateral pFC on the attentional blink depend on individual baseline performance. _Journal of Cognitive Neuroscience, 27(12)_, 2382-2393. doi: [10.1162/jocn_a_00867](https://doi.org/10.1162/jocn_a_00867)
+
+```{r read study 1 data}
+dataPath_study1 <- here("data","AB-tDCS_study1.txt")
+data_study1_fromDisk <- read.table(dataPath_study1, header = TRUE, dec = ",")
+glimpse(data_study1_fromDisk)
+```
+
+We'll use only a subset of columns, with the header structure `block/stim`\_`target`\_`lag`\_`prime`, where:
+
+* __block/stim__ is either:
+    1. `vb`: "anodal" tDCS, "pre" block (before tDCS)
+    2. `tb`: "anodal" tDCS, "tDCS" block (during tDCS)
+    3. `nb`: "anodal" tDCS, "post" block (after tDCS)
+    4. `vd`: "cathodal" tDCS, "pre" block (before tDCS)
+    5. `td`: "cathodal" tDCS, "tDCS" block (during tDCS)
+    6. `nd`: "cathodal" tDCS, "post" block (after tDCS)
+* __target__ is either:
+    1.`T1` (T1 accuracy): proportion of trials in which T1 was identified correctly
+    2. `T2|T1` (T2|T1 accuracy): proportion of trials in which T2 was identified correctly, given T1 was identified correctly
+* __lag__ is either:
+    1. `2` (lag 2), when T2 followed T1 after 1 distractor 
+    2. `4` (lag 4), when T2 followed T1 after 3 distractors
+    3. `10`, (lag 10), when T2 followed T1 after 9 distractors
+* __prime__ is either:
+    1. `P` (prime): when the stimulus at lag 2 (in lag 4 or lag 10 trials) had the same identity as T2 
+    2. `NP` (no prime) when this was not the case. Study 2 had no primes, so we'll only keep these.
+    
+We'll also keep two more columns: `fileno` (participant ID) and `First_Session` (`1` meaning participants received anodal tDCS in the first session, `2` meaning participants received cathodal tDCS in the first session).
+
+### Reformat
+
+Now we'll reformat the data to match the data frame for study 2:
+
+```{r format as for study 2}
+df_study1 <- data_study1_fromDisk %>%
+  select(fileno, First_Session, ends_with("_NP"), -contains("Min")) %>% # keep only relevant columns
+  gather(key, accuracy, -fileno, -First_Session) %>% # make long form
+  mutate(accuracy = accuracy * 100) %>% # convert from proportion to percentage correct
+  # split key column to create separate columns for each factor
+  separate(key, c("block", "stimulation", "target", "lag"), c(1,3,5)) %>% # split after 1st, 3rd, and 5th character
+  # convert to factors, relabel levels to match those in study 2
+  mutate(block = factor(block, levels = c("v", "t", "n"), labels = c("pre", "tDCS", "post")),
+         stimulation = factor(stimulation, levels = c("b_", "d_"), labels = c("anodal", "cathodal")),
+         lag = factor(lag, levels = c("_2_NP", "_4_NP", "_10_NP"), labels = c(2, 4, 10)),
+         First_Session = factor(First_Session, labels = c("anodal","cathodal"))) %>%
+  spread(target, accuracy) %>% # create separate columns for T2.given.T1 and T1 performance
+  rename(T2.given.T1 = NB, first.session = First_Session, subject = fileno)# rename columns to match those in study 2
+```
+
+```{r print slice study 1 data}
+kable(head(df_study1,19), digits = 1, caption = "Data frame for study 1")
 ```
 
