Fix error in partial correlation function
Sample size of study 1 was hard-coded, so estimate for study 2 was
(slightly) off

--- a/AB_tDCS-EEG.Rmd
+++ b/AB_tDCS-EEG.Rmd
@@ -268,7 +268,7 @@ compute_pcorr <- function(df) {
   
   # partial correlation  
   summarise(r = pcor(c("anodal","cathodal","first.session"), var(.))) %>% # partial correlation coefficient
-  mutate(stats = list(as.data.frame(pcor.test(r, 1, 34)))) %>% # t-stat, df and p-value of coefficient
+  mutate(stats = list(as.data.frame(pcor.test(r, 1, n_distinct(df$subject))))) %>% # t-stat, df and p-value of coefficient
   unnest(stats) # unpack resulting data frame into separate columns %>%
 }
 ```
